添加对于命令行的一些解释

--- a/doc/安装环境.md
+++ b/doc/安装环境.md
@@ -41,4 +41,15 @@ gcc -v
 
 有版本显示则说明安装成功，可以愉快的打c代码了。
 
+### 两个-与一个-的区别
+在命令行参数中，单连字符(`-`)和双连字符(`--`)的区别如下：
 
+1. 单连字符(`-`)用于单字母选项，如`-v`、`-h`等
+2. 双连字符(`--`)用于完整单词选项，如`--version`、`--help`等
+
+对于`gcc`命令：
+
+- `gcc --version` 显示完整的版本信息，但通常较为简洁
+- `gcc -v` 显示详细(verbose)信息，包括版本、编译配置、目标平台等更多细节
+
+这是命令行工具的常见约定，不仅限于`gcc`，许多命令行工具都遵循这种模式。
